# ChangeLog for media-sound/liteamp
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/liteamp/Attic/ChangeLog,v 1.6 2003/04/16 17:07:47 seo Exp $

*liteamp-0.2.2 (17 Apr 2003)

  17 Apr 2003; Jungmin Seo <seo@gentoo.org> liteamp-0.2.2.ebuild,
  files/liteamp-0.2.2 :
  new version

*liteamp-0.2.1 (19 Feb 2003)

  02 Mar 2003; Jungmin Seo <seo@gentoo.org> liteamp-0.2.1.ebuild :
  it is stable on x86 and ppc now

  19 Feb 2003; Jungmin Seo <seo@gentoo.org> liteamp-0.2.1.ebuild,
  files/liteamp-0.2.1 :
  new version

*liteamp-0.2 (17 Feb 2003)

  17 Feb 2003; Jungmin Seo <seo@gentoo.org> liteamp-0.2.ebuild,
  files/liteamp-0.2 :
  new version

*liteamp-0.1 (28 Jan 2003)

  28 Jan 2003; Jungmin Seo <seo@gentoo.org> liteamp-0.1.ebuild,
  files/liteamp-0.1, ChangeLog :
  new ebuild, submitted by Young-Ho Cha <ganadist@mizi.com>