@@ -1,5 +1,7 @@
-MD5 773a4dea76fa531b3e921b2dd5acf3d6 ChangeLog 903
-MD5 7ef611ccc2c6b98e5e9e5bdbb174fa53 liteamp-0.2.1.ebuild 689
+MD5 9567b3a5e8ddd71a3d28f40ad1c8f1ea liteamp-0.2.2-r1.ebuild 728
 MD5 b6180677be99d1399bdac953df677d8b liteamp-0.2.2.ebuild 691
+MD5 7ef611ccc2c6b98e5e9e5bdbb174fa53 liteamp-0.2.1.ebuild 689
+MD5 a2c291cd07f686ea0bc67953e3eb36b0 ChangeLog 1088
 MD5 c1e711378c5a97218bbd9966784e0021 files/digest-liteamp-0.2.1 65
 MD5 fbdf683fb18e52943ed11a8bc2483302 files/digest-liteamp-0.2.2 65
+MD5 fbdf683fb18e52943ed11a8bc2483302 files/digest-liteamp-0.2.2-r1 65
