@@ -1,0 +1,1 @@
+MD5 6290a47f00e051d756c84ef22d2515bc liteamp-0.2.2.tar.gz 265325
